Docker/bin/yamls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: am-web-svc
  labels:
    name: am-web-svc
spec:
  type: NodePort
  ports:
  - name: websvc
    port: 8081
    targetPort: 8081
  - name: webtier
    port: 8080
    targetPort: 8080
  - name: nodewt
    port: 8080
    nodePort: 30001
  - name: nodews
    port: 8081
    nodePort: 30002
  # label keys and values that must match in order to receive traffic for this service
  selector:
    name: am-web-pod
