Docker/bin/yamls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: am-webtier-svc
  namespace: default
spec:
  rules:
  - host: amkuminion1.asiapacific.hpqcorp.net
    http:
      paths:
      - backend:
          serviceName: am-web-svc
          servicePort: 8080
        path: /AssetManager
      - backend:
          serviceName: am-web-svc
          servicePort: 8081
        path: /AssetManagerWebService
      - backend:
          serviceName: am-bnode-svc
          servicePort: 8080
        path: /amb
      - backend:
          serviceName: am-quicksearch-svc
          servicePort: 8080
        path: /quicksearch
      - backend:
          serviceName: am-ess-svc
          servicePort: 8080
        path: /ServiceCatalog
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
        path: /
